- fixed UpdateChecker - Refactored loading, decreased startup timeA